--- a/myface-onface-html/src/assets/less/style/page/myface-user.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-user.less
@@ -11,7 +11,7 @@
 		left: 15px;
 		display: block;
 		width:30px;
-		height: 44px;
+		height: 45px;
 		display: table-cell;
 		vertical-align: middle;
 		color: @text-color-1;
@@ -25,7 +25,7 @@
 			display: block;
 			&:before {
 				position: absolute;
-				top: 6px;
+				top: 8px;
 				left: 0;
 				font-size: 30px;
 			}
@@ -48,7 +48,7 @@
 }
 .usershop-bar {
 	.tabs-bar {
-		border-bottom-color: transparent;
+		border: 0;
 		margin-bottom: 0;
 	}
 	.bread-crumb-item {
