--- a/myface-onface-html/src/views/block/_banner.html
+++ b/myface-onface-html/src/views/block/_banner.html
@@ -5,7 +5,7 @@
 			<div class="banner-item banner-1">
 				<button class="arrow arrow-left" aria-label=""><span class="icon"></span></button>
 					<div class="banner-1-inner">
-						<a href="#"><img src="assets/images/upload/banner/banner-2.jpg" alt="myface"></a>
+						<a href="https://myface.vn"><img src="assets/images/upload/banner/banner-2.jpg" alt="myface"></a>
 					</div>
 				<button class="arrow arrow-right" aria-label=""><span class="icon"></span></button>
 			</div>
@@ -14,10 +14,10 @@
 		<!--banner-right-->
 		<div class="col-xs-12 col-xs-3 banner-right">
 			<div class="banner-item banner-2">
-				<a href="#"><img src="assets/images/upload/banner/banner-3.jpg" alt="myface"></a>
+				<a href="https://shop.myface.vn/shop/dealgiasi"><img src="assets/images/upload/banner/banner-3.jpg" alt="myface"></a>
 			</div><!--/.banner-2-->
 			<div class="banner-item banner-3">
-				<a href="#"><img src="assets/images/upload/banner/banner-4.jpg" alt="myface"></a>
+				<a href="https://shop.myface.vn/shop/dealgiasi"><img src="assets/images/upload/banner/banner-4.jpg" alt="myface"></a>
 			</div><!--/.banner-3-->
 		</div><!--/.banner-right-->
 	</div>
