--- a/myface-onface-html/src/views/block/_header-row-2.html
+++ b/myface-onface-html/src/views/block/_header-row-2.html
@@ -1,4 +1,4 @@
-<div class="header-row-2 mf-cate-nav">
+<div class="header-row-2 mf-cate-nav is-sticky">
 	<nav class="container navbar category-nav">
 		<ul class="nav navbar-nav cate-list">
 		  <li class="cate-item cate-tt">
