--- a/myface-onface-html/src/views/block/_shopper-menu.html
+++ b/myface-onface-html/src/views/block/_shopper-menu.html
@@ -1,4 +1,4 @@
-<div class="header-row-2 shopper-menu">
+<div class="header-row-2 shopper-menu is-sticky">
 	<div class="container">
 		<!--usershop-bar-->
 		<div class="filterbar usershop-bar">
