--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -329,25 +329,25 @@
 	&.mf-cate-nav {
 		.category-nav {
 			border: 0;
-            min-width: auto;
-            padding: 0;
-            .cate-list {
-                text-align: center;
-            }
-            @media (max-width: @screen-md-max) {
-                width: 100%;
-                .cate-list,
-                .promotion-list {
-                    position: relative;
-                    overflow-x: auto;
-                    overflow-y: hidden;
-                    -webkit-overflow-scrolling: touch;
-                    white-space: nowrap;
-                    width: 100%;
-                    -ms-overflow-style: none;
-                    overflow-y: -moz-scrollbars-none;
-                }
-            }
+      min-width: auto;
+      padding: 0;
+      .cate-list {
+        text-align: center;
+      }
+      @media (max-width: @screen-md-max) {
+        width: 100%;
+        .cate-list,
+        .promotion-list {
+          position: relative;
+          overflow-x: auto;
+          overflow-y: hidden;
+          -webkit-overflow-scrolling: touch;
+          white-space: nowrap;
+          width: 100%;
+          -ms-overflow-style: none;
+          overflow-y: -moz-scrollbars-none;
+        }
+      }
 		}
 		.cate-item {
 			display: inline-block;
@@ -370,8 +370,10 @@
     min-height: 40px;
     width: 100%;
     height: 40px;
-    position: relative;
     white-space: nowrap;
+    @media (max-width: @screen-sm-max) {
+      .touch-slide;
+    }
     > ul {
       > li {
         > a {
@@ -385,7 +387,7 @@
             display: block;
             background-image: url(../images/icons/home.png);
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center center;
           }
         }
         &:nth-child(2) {
@@ -402,40 +404,40 @@
   }
 }
 .shopper-menu {
-    @media (max-width: @screen-sm-max) {
-        .navbar {
-            min-width: 0;
-            height: auto;
-            .tabs-menu {
-                position: relative;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                white-space: nowrap;
-                width: 100%;
-                -ms-overflow-style: none;
-                overflow-y: -moz-scrollbars-none;
-                margin-left: 0;
-                margin-right: 0;
-                .tab-item {
-                    &:first-child {
-                        padding-left: 0;
-                        padding-right: 0;
-                    }
-                }
-                &.pull-right {
-                    float: left !important;
-                }
-            }
+  @media (max-width: @screen-sm-max) {
+    .navbar {
+      min-width: 0;
+      height: auto;
+      .tabs-menu {
+        position: relative;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+        width: 100%;
+        -ms-overflow-style: none;
+        overflow-y: -moz-scrollbars-none;
+        margin-left: 0;
+        margin-right: 0;
+        .tab-item {
+          &:first-child {
+            padding-left: 0;
+            padding-right: 0;
+          }
         }
+        &.pull-right {
+          float: left !important;
+        }
+      }
     }
+  }
 }
 .cate-list {
 	margin: 0;
 	.cate-item {
 		> a {
-			padding-top: 4px;
-			padding-bottom: 4px;
+			padding-top: 5px;
+			padding-bottom: 5px;
 			display: block;
 			border-top: 1px solid transparent;
 			border-bottom: 1px solid transparent;
@@ -454,29 +456,28 @@
 		}
 		.cate-name {
 			color: @text-color-2;
-            text-transform: lowercase;
-            margin-top: 5px;
-            &:first-letter {
-                text-transform: uppercase;
-            }
+      text-transform: lowercase;
+      &:first-letter {
+        text-transform: uppercase;
+      }
 		}
-        &.cate-lt {
-            > a {
-                .cate-icon {
-                    width: 45px;
-                }
-            }
+    &.cate-lt {
+      > a {
+        .cate-icon {
+          width: 45px;
         }
+      }
+    }
 	}
 }
 .promotion-list {
 	float: right;
 	margin-right: -15px;
-    @media (max-width: @screen-md-max) {
-        float: left;
-        margin: 10px 0;
-        background-color: #f0f1f3;
-    }
+  @media (max-width: @screen-md-max) {
+    float: left;
+    margin: 10px 0;
+    background-color: #f0f1f3;
+  }
 }
 .navbar-nav > li.promotion-item {
 	border-right: @border;
