--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -1,7 +1,7 @@
 .category-1-name {
 	width: 100%;
-    margin-top: 35px;
-    margin-bottom: 20px;
+  margin-top: 35px;
+  margin-bottom: 20px;
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
@@ -9,37 +9,37 @@
 	float: left;
 }
 .catebar {
-    .category-nav {
-        margin-bottom: 15px;
-    }
+  .category-nav {
+    margin-bottom: 15px;
+  }
 	.cate-list {
 		width: 100%;
 		height: 90px;
 		text-align: center;
 		overflow: hidden;
 
-        position: relative;
-        overflow-x: auto;
-        overflow-y: hidden;
-        -webkit-overflow-scrolling: touch;
-        white-space: nowrap;
-        width: 100%;
-        -ms-overflow-style: none;
-        overflow-y: -moz-scrollbars-none;
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    width: 100%;
+    -ms-overflow-style: none;
+    overflow-y: -moz-scrollbars-none;
 	}
 	.cate-item {
 		margin-right: 18px;
 		display: inline-block;
 		float: none;
-        white-space: normal;
-        .cate-icon {
-            height: 32px;
-            margin-bottom: 0;
-        }
-        .cate-name {
-            line-height: 14px;
-            margin-top: 10px;
-        }
+    white-space: normal;
+    .cate-icon {
+      height: 32px;
+      margin-bottom: 0;
+    }
+    .cate-name {
+      line-height: 14px;
+      margin-top: 10px;
+    }
 		> a {
 			width: 90px;
 			height: 90px;
@@ -50,10 +50,10 @@
 			border-radius: 6px;
 			&:hover {
 				border-color: @primary-color;
-                background: #fff;
-                .cate-name {
-                    color: @primary-color;
-                }
+        background: #fff;
+        .cate-name {
+          color: @primary-color;
+        }
 			}
 		}
 		&.active {
@@ -104,24 +104,29 @@
 		&.filter-menu,
 		&.filter-property {
 			margin-right: 0;
-		}
-        &.filter-menu {
-            .tab-item {
-                a {
-                    font-weight: normal;
-                }
-            }
+      .tab-item {
+        &:last-child {
+          padding-right: 0;
         }
+      }
+		}
+    &.filter-menu {
+      .tab-item {
+        a {
+            font-weight: normal;
+        }
+      }
+    }
 	}
 	.filter-property {
 		float: right;
 		margin-right: -12px;
 	}
-    main & > {
-        @media (max-width: @screen-md-max) {
-            display: none;
-        }
+  main & > {
+    @media (max-width: @screen-md-max) {
+      display: none;
     }
+  }
 }
 .tab-single {
 	a {
