--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -41,6 +41,9 @@
 		min-height: 100%;
 		border-radius: @border-radius;
 	}
+  .arrow {
+    display: none;
+  }
 }
 .arrow {
   width: 30px;
@@ -194,9 +197,9 @@
 		background-color: @primary-color;
 		border-color: @primary-color;
 	}
-    @media (max-width: @screen-sm-max) {
-        width: 100%;
-    }
+  @media (max-width: @screen-sm-max) {
+    width: 100%;
+  }
 }
 
 /*myface-shop-list*/
