--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -26,6 +26,14 @@
     .shop-name-text {
       font-size: 18px;
       line-height: 25px;
+      color: @text-color-1;
+    }
+    a {
+      &:hover {
+        .shop-name-text {
+          color: @primary-color;
+        }
+      }
     }
 	}
 	.product-gallery {
@@ -49,19 +57,19 @@
 				}
 			}
 		}
-        @media (max-width: @screen-xs-max) {
-            padding-right: 0;
+    @media (max-width: @screen-xs-max) {
+      padding-right: 0;
+    }
+    @media (max-width: @screen-sm-max) {
+      .thumnail-inner {
+        width: 100%;
+        height: 50px;
+        .touch-slide;
+        .items {
+          top: 0;
         }
-        @media (max-width: @screen-sm-max) {
-            .thumnail-inner {
-                width: 100%;
-                height: 50px;
-                .touch-slide;
-                .items {
-                    top: 0;
-                }
-            }
-        }
+      }
+    }
 	}
 	.product-detail {
 		width: 100%;
@@ -118,10 +126,11 @@
 			.original {
 				display: inline-block;
 				margin-top: 3px;
+        font-size: 14px;
 			}
 		}
 		&.pin-block {
-			padding-bottom: 20px;
+			padding-bottom: 40px;
 		}
 	}
 	.readmore {
@@ -135,6 +144,9 @@
 	}
 	.safe-block {
 		border-bottom: 0;
+    p {
+      margin-bottom: 15px;
+    }
 	}
 }
 .block-title {
@@ -169,11 +181,11 @@
 .shipping-block {
 	position: relative;
 	.shipping-action {
-        display: block;
+    display: block;
 		position: absolute;
 		bottom: 10px;
 		right: 0;
-		color: @text-color-1;
+		color: @text-color-2;
 		&:hover {
 			color: @primary-color;
 		}
@@ -200,6 +212,7 @@
 			margin-right: 5px;
 			font-weight: bold;
 			&:before {
+        color: @text-color-2;
 				margin-right: 1px;
 			}
 		}
@@ -210,7 +223,7 @@
 }
 .add-cart-block {
 	width: 100%;
-	margin: 20px 0;
+	margin: 30px 0;
 	position: relative;
 }
 .lightbox-wrap {
@@ -286,7 +299,7 @@
   }
 }
 .like-box {
-	width: 490px;
+	width: auto;
 	float: left;
 	margin-top: 10px;
 	li {
@@ -345,15 +358,21 @@
 	border-bottom: @border;
 }
 .mf-product-property {
-	border-color: transparent;
+	border: 0;
 	margin: 0;
 	padding: 0;
 	.item-property {
 		display: block;
+    padding: 10px 0;
+    &.color-property,
+    &.size-property {
+      padding-bottom: 2px;
+    }
 		.item-property-label {
 			width: 100%;
 			display: block;
 			font-weight: 600;
+      line-height: inherit;
 		}
 		.item-property-values {
 			.property-select {
