--- a/myface-onface-html/src/views/block/_cate-1-nav.html
+++ b/myface-onface-html/src/views/block/_cate-1-nav.html
@@ -5,6 +5,13 @@
 	<nav class="container navbar category-nav">
 		<ul class="nav navbar-nav cate-list">
 			{% for x in [1,2,3,4,5,7,8] %}
+      <li class="cate-item cate-dtlk-dienthoai">
+        <a class="" href="myface-category-2.html">
+          <span class="cate-icon">
+          </span>
+          <span class="cate-name">Thời trang nam</span>
+        </a>
+      </li>
 		  <li class="cate-item cate-tt-nam">
 		    <a class="" href="myface-category-2.html">
 		    	<span class="cate-icon">
