--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -15,6 +15,7 @@
 @import "plugin/bootstrap-select.less";
 @import "plugin/rwd-table.less";
 @import "plugin/bootstrap-datetimepicker.less";
+@import "plugin/slick.less";
 //COMPONENTS
 //-----------
 @import "margin-padding.less";
