--- a/myface-onface-html/src/views/block/_banner.html
+++ b/myface-onface-html/src/views/block/_banner.html
@@ -3,11 +3,12 @@
 		<!--banner-left-->
 		<div class="col-xs-12 col-ms-9 banner-left">
 			<div class="banner-item banner-1">
-				<button class="arrow arrow-left" aria-label=""><span class="icon"></span></button>
-					<div class="banner-1-inner">
-						<a href="https://myface.vn"><img src="assets/images/upload/banner/banner-2.jpg" alt="myface"></a>
-					</div>
-				<button class="arrow arrow-right" aria-label=""><span class="icon"></span></button>
+				<div class="banner-1-inner">
+					<a href="https://myface.vn/tham-gia-la-co-qua.html"><img src="assets/images/upload/banner/banner-2.jpg" alt="myface"></a>
+				</div>
+        <div class="banner-1-inner">
+          <a href="https://shop.myface.vn/shop/dealgiasi"><img src="assets/images/upload/banner/banner-5.jpg" alt="myface"></a>
+        </div>
 			</div>
 		</div><!--/.banner-left-->
 
