--- a/myface-onface-html/src/views/block/_script.html
+++ b/myface-onface-html/src/views/block/_script.html
@@ -3,4 +3,5 @@
 <script src="assets/js/plugin/bootstrap.js" type="text/javascript"></script>
 <script src="assets/js/plugin/bootstrap-select.js" type="text/javascript"></script>
 <script src="assets/js/plugin/bootstrap-datetimepicker.js" type="text/javascript"></script>
+<script src="assets/js/plugin/slick.min.js" type="text/javascript"></script>
 <script src="assets/js/script.js" type="text/javascript"></script>
