--- a/myface-onface-html/src/views/block/_account-header.html
+++ b/myface-onface-html/src/views/block/_account-header.html
@@ -1,40 +1,38 @@
 <div class="user-account-header">
-	<div class="col-md-11 col-md-offset-1">
-		<div class="col-md-2 user-account-img">
-			<figure class="user-img">
-				<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">		
-			</figure>
-		</div>
-		<div class="col-md-6 user-account-info">
-			<h2 class="user-name"><a href="#">Natalie Berowska</a></h2>
-			<ul class="icon-tools user-contact-info">
-				<li class="phone-info"><a href="tel:0902559591">0902559591</a></li>
-				<li class="mail-info"><a href="mailto:chienbinh.0904@gmail.com">chienbinh.0904@gmail.com</a></li>
-			</ul>
-			<ul class="icon-tools tool-info">
-				<li class="m-like">
-					<a href="#"><span class="icon i-like">789</span><span class="icon-text">thích</span></a>
-				</li>
-	      <li class="m-pin">
-	      	<a href="#"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></a>
-	    	</li>     
-	    	<li class="m-view">
-	    		<a href="#"><span class="icon i-view">456</span><span class="icon-text">xem sản phẩm</span></a>
-	    	</li>
-	      <li class="m-buy">
-	      	<a href="#"><span class="icon i-buy">123</span><span class="icon-text">đã mua</span></a>
-	      </li>
-			</ul>
-		</div>
-		<nav class="col-md-3 user-account-change-nav">
-			<ul class="nav navbar-nav">
-		    <li class="change-info-btn {% if current_page == 'user-account-change-info' %}active{% endif %}">
-		    	<a href="user-account-change-info.html">Thay đổi thông tin</a>
-		    </li>
-		    <li class="more-nav">
-		    	<a href="#"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
-		    </li>
-		  </ul>
-		</nav>
+	<div class="col-md-2 col-md-offset-1 user-account-img">
+		<figure class="user-img">
+			<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">
+		</figure>
 	</div>
+	<div class="col-md-6 user-account-info">
+		<h2 class="user-name"><a href="#">Natalie Berowska</a></h2>
+		<ul class="icon-tools user-contact-info">
+			<li class="phone-info"><a href="tel:0902559591">0902559591</a></li>
+			<li class="mail-info"><a href="mailto:chienbinh.0904@gmail.com">chienbinh.0904@gmail.com</a></li>
+		</ul>
+		<ul class="icon-tools tool-info">
+			<li class="m-like">
+				<a href="#"><span class="icon i-like">789</span><span class="icon-text">thích</span></a>
+			</li>
+      <li class="m-pin">
+      	<a href="#"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></a>
+    	</li>
+    	<li class="m-view">
+    		<a href="#"><span class="icon i-view">456</span><span class="icon-text">xem sản phẩm</span></a>
+    	</li>
+      <li class="m-buy">
+      	<a href="#"><span class="icon i-buy">123</span><span class="icon-text">đã mua</span></a>
+      </li>
+		</ul>
+	</div>
+	<nav class="col-md-2 user-account-change-nav">
+		<ul class="nav navbar-nav">
+	    <li class="change-info-btn {% if current_page == 'user-account-change-info' %}active{% endif %}">
+	    	<a href="user-account-change-info.html">Thay đổi thông tin</a>
+	    </li>
+	    <li class="more-nav">
+	    	<a href="#"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
+	    </li>
+	  </ul>
+	</nav>
 </div>
