--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -16,10 +16,12 @@
 						<div class="input-group-btn">
 							<select class="selectpicker cate-search">
 								<option>Tất cả</option>
-								<option>Danh mục 1</option>
-								<option>Danh mục 2</option>
-								<option>Danh mục 3</option>
-								<option>Danh mục 5</option>
+								<option>Điện thoại & linh kiện</option>
+								<option>Mẹ & bé</option>
+								<option>Laptop</option>
+								<option>Thời trang</option>
+                <option>Hàng tiêu dùng</option>
+                <option>Mỹ phẩm</option>
 							</select>
 						</div>
 						<input aria-label="..." class="form-control input-search" placeholder="Tìm sản phẩm bạn quan tâm" type="text">
