--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -1,5 +1,6 @@
 .header-row-1 {
 	height: 70px;
+  border-bottom: @border;
 	.navbar {
 		height: 70px;
 		padding: 15px 0;
@@ -70,9 +71,9 @@
 				color: @text-color-1;
 			}
 			.caret {
-				right: 20px;
+				right: 13px;
 				margin-right: 0;
-		    margin-top: -2px;
+		    margin-top: -1px;
 		    border-top: 4px solid;
 		    border-right: 4px solid transparent;
 		    border-left: 4px solid transparent;
@@ -275,7 +276,7 @@
 		display: block;
 	}
 	.account-label-1 {
-		width: 109px;
+		max-width: 109px;
 		.ellipsis;
 		font-weight: 600;
 		&:after {
@@ -323,6 +324,7 @@
 	height: 60px;
 	background-color: @bg-color-3;
 	margin-bottom: 20px;
+  margin-top: -1px;
 	.navbar {
 		min-width: 1170px;
 	}
@@ -472,7 +474,17 @@
 }
 .promotion-list {
 	float: right;
-	margin-right: -15px;
+  padding-right: 15px;
+  .promotion-1 {
+    a {
+      border-left: @border;
+    }
+  }
+  .promotion-3 {
+    a {
+      border-right: @border;
+    }
+  }
   @media (max-width: @screen-md-max) {
     float: left;
     margin: 10px 0;
