--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -6,6 +6,7 @@
 	}
 }
 .wrap-banner {
+  width: 100%;
 	height: 415px;
 	margin-bottom: 15px;
 	float: left;
@@ -41,8 +42,10 @@
 		min-height: 100%;
 		border-radius: @border-radius;
 	}
-  .arrow {
-    display: none;
+  @media (max-width: @screen-md-max) {
+    .arrow {
+      opacity: 1;
+    }
   }
 }
 .arrow {
