--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -473,4 +473,9 @@
     width: 75px;
     height: 75px;
   }
+  .user-account-change-nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
