--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -11,7 +11,7 @@
             </li>
             <li class="li-item f-title">myFace Shop là gì?</li>
             <li class="li-item">
-              <a class="mf-about" href="#">
+              <a class="mf-about" href="support-center.html">
                 <p>myFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... <span class="readmore">Xem thêm</span></p>
               </a>
             </li>
@@ -31,19 +31,19 @@
               </a>
             </li>
     			  <li class="li-item">
-              <a href="#">Giới thiệu</a>
+              <a href="support-center.html">Giới thiệu</a>
             </li>
     			   <li class="li-item">
-              <a href="#">Quy chế sàn giao dịch</a>
+              <a href="support-center.html">Quy chế sàn giao dịch</a>
             </li>
              <li class="li-item">
-              <a href="#">Chính sách bảo mật</a>
+              <a href="support-center.html">Chính sách bảo mật</a>
             </li>
              <li class="li-item">
-              <a href="#">Tuyên bố miễn trừ</a>
+              <a href="support-center.html">Tuyên bố miễn trừ</a>
             </li>
              <li class="li-item">
-              <a href="#">Liên hệ</a>
+              <a href="#" data-toggle="modal" data-target="#contact-modal">Liên hệ</a>
             </li>
     			</ul>
       	</div>
