--- a/myface-onface-html/src/views/layout/_layout-myface-shop.html
+++ b/myface-onface-html/src/views/layout/_layout-myface-shop.html
@@ -15,4 +15,5 @@
 {% include "../block/modal/_alert-modal.html" %}
 {% include "../block/modal/_yes-no-modal.html" %}
 {% include "../block/modal/_forgetpass-modal.html" %}
+{% include "../block/modal/_contact-modal.html" %}
 {% endblock %}
