--- a/myface-onface-html/src/assets/less/style/page/support-center.less
+++ b/myface-onface-html/src/assets/less/style/page/support-center.less
@@ -67,7 +67,7 @@
 	font-weight: 600;
 	font-size: 21px;
 	border-bottom: @border;
-	@media (max-width: @screen-xs-max) {	
+	@media (max-width: @screen-xs-max) {
 		font-size: 19px;
 	}
 }
@@ -139,7 +139,7 @@
 	}
 }
 .sidebar-drop {
-	@media (max-width: @screen-sm-max) {	
+	@media (max-width: @screen-xs-max) {
 		display: none;
 		width: 100%;
 		position: absolute;
@@ -149,11 +149,11 @@
 }
 .sidebar-tab-selector {
 	display: none;
-	@media (max-width: @screen-sm-max) {	
+	@media (max-width: @screen-xs-max) {
 		display: block;
 		border: @border;
 		border-radius: 3px;
-		padding: 10px;
+		padding: 8px 10px;
 		color: @text-color-1;
 		font-size: 16px;
 		font-weight: 600;
@@ -224,7 +224,7 @@
 		left: 18px;
 		background-image: url(../images/icons/help.png);
 		background-repeat: no-repeat;
-		@media (max-width: @screen-xs-max) {	
+		@media (max-width: @screen-xs-max) {
 			top: 14px;
 	    left: 15px;
 	  }
