--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -38,7 +38,7 @@
 					<div class="accordion address-list" id="accordion">
 						<div class="panel accordion-section">
 							<ul class="row address">
-						    <li class="col-md-4">
+						    <li class="col-sm-6 col-md-4">
 						    	<p class="address-p-1">
 						    		<label class="u-name">Tuần lộc vui vẻ</label>
 						    		<span class="span-divider">-</span>
@@ -46,7 +46,7 @@
 						    	</p>
 						    	<p class="address-p-1">27A Hồ Văn Huê, P.6, Q. Phú Nhuận, TP, HCM</p>
 						    </li>
-						    <li class="col-md-2">
+						    <li class="col-sm-2">
 						   		<div class="box-tools pull-right">
 				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-1">
 				            	<i class="fa fa-edit" aria-hidden="true"></i>
@@ -56,7 +56,7 @@
 				            </button>
 				          </div>
 						    </li>
-						    <li class="col-md-6">
+						    <li class="col-sm-4 col-md-6">
 						    	<button class="btn add-default-btn default">
 						    		Mặc định
 					    		</button>
@@ -74,7 +74,7 @@
 
 						<div class="panel accordion-section">
 							<ul class="row address">
-						    <li class="col-md-4">
+						    <li class="col-sm-6 col-md-4">
 						    	<p class="address-p-1">
 						    		<label class="u-name">Tuần lộc vui vẻ</label>
 						    		<span class="span-divider">-</span>
@@ -82,7 +82,7 @@
 						    	</p>
 						    	<p class="address-p-1">27A Hồ Văn Huê, P.6, Q. Phú Nhuận, TP, HCM</p>
 						    </li>
-						    <li class="col-md-2">
+						    <li class="col-sm-2">
 						   		<div class="box-tools pull-right">
 				            <button type="button" class="btn btn-box-tool" title="chỉnh sửa" data-toggle="collapse" data-parent="#accordion" data-target="#accordion-2">
 				            	<i class="fa fa-edit" aria-hidden="true"></i>
@@ -92,7 +92,7 @@
 				            </button>
 				          </div>
 						    </li>
-						    <li class="col-md-6">
+						    <li class="col-sm-4 col-md-6">
 						    	<button class="btn add-default-btn">
 						    		Đặt làm mặc định
 					    		</button>
