--- a/myface-onface-html/src/assets/less/style/block/product-info-block.less
+++ b/myface-onface-html/src/assets/less/style/block/product-info-block.less
@@ -19,9 +19,7 @@
 		width: 358px;
 		height: 358px;
 		overflow: hidden;
-		img {
-			width: 100%;
-		}
+        text-align: center;
 	}
 	.thumnail {
 		width: 358px;
@@ -107,7 +105,7 @@
 		    line-height: 26px;
 		    padding: 4px 20px;
 		    border: @border;
-		    .border-radius(2px); 
+		    .border-radius(2px);
 		    text-align: center;
 		    color: @text-color-1;
 		    &:hover {
