--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -1,12 +1,14 @@
 .wrap-user {
 	width: 100%;
 	min-height: 500px;
+  float: left;
+  margin-top: 35px;
+  margin-bottom: 5px;
 }
 .user-account-header {
   position: relative;
 	width: 100%;
 	float: left;
-	margin-top: 30px;
 	margin-bottom: 30px;
 	a {
 		color: @text-color-1;
@@ -17,6 +19,21 @@
 	.icon-tools {
 		li {
 			margin-right: 10px;
+      a {
+        color: @text-color-1;
+      }
+      .icon {
+        margin-right: 2px;
+        &:before {
+          width: auto;
+          margin-right: 5px;
+        }
+        &.i-pin {
+          &:before {
+            width: 12px;
+          }
+        }
+      }
 		}
 	}
 }
@@ -37,10 +54,11 @@
 }
 .user-name {
 	font-size: 20px;
-	font-weight: 600;
+	font-weight: bold;
+  margin-bottom: 0;
 }
 .user-contact-info {
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 	.mail-info {
 		position: relative;
 		&:before {
@@ -106,7 +124,7 @@
 .user-account-content {
 	width: 100%;
 	float: left;
-	padding-top: 30px;
+	margin-top: 35px;
 }
 .general-product-row {
 	.m-product-item {
