--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -19,6 +19,7 @@
 	border-top: 0;
 	.shop-name {
 		padding: 10px 0 0;
+    line-height: 0;
     .shop-img {
       width: 25px;
       height: 25px;
@@ -38,6 +39,7 @@
 	}
 	.product-gallery {
 		margin-top: 10px;
+    padding: 0;
 		.thumnail {
 			width: 100%;
 			height: 66px;
@@ -71,6 +73,11 @@
       }
     }
 	}
+  .product-info {
+    @media (min-width: @screen-sm-min) {
+      padding-left: 30px;
+    }
+  }
 	.product-detail {
 		width: 100%;
 		float: left;
@@ -191,6 +198,7 @@
 		}
 		&:before {
 			content: "\f055";
+      width: auto;
 		}
 	}
 }
@@ -345,10 +353,10 @@
 		width: 100%;
 		height: auto;
 	}
-    @media (max-width: @screen-xs-max) {
-        padding: 0;
-        border: 0;
-    }
+  @media (max-width: @screen-xs-max) {
+    padding: 0;
+    border: 0;
+  }
 }
 .block-text {
 	margin-bottom: 0;
